RESOLVED FIXED97260
CHECK_ARRAY_CONSISTENCY isn't being used or tested, so we should remove it
https://bugs.webkit.org/show_bug.cgi?id=97260
Summary CHECK_ARRAY_CONSISTENCY isn't being used or tested, so we should remove it
Filip Pizlo
Reported 2012-09-20 13:42:22 PDT
Rubber stamped by Geoff Garen.
Attachments
patch for landing (17.66 KB, patch)
2012-09-20 14:19 PDT, Filip Pizlo
webkit.review.bot: commit-queue-
Filip Pizlo
Comment 1 2012-09-20 14:19:46 PDT
Created attachment 164978 [details] patch for landing
WebKit Review Bot
Comment 2 2012-09-20 14:26:12 PDT
Comment on attachment 164978 [details] patch for landing Rejecting attachment 164978 [details] from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 1 Geoff Garen found in /mnt/git/webkit-commit-queue/Source/JavaScriptCore/ChangeLog does not appear to be a valid reviewer according to committers.py. ERROR: /mnt/git/webkit-commit-queue/Source/JavaScriptCore/ChangeLog neither lists a valid reviewer nor contains the string "Unreviewed" or "Rubber stamp" (case insensitive). Full output: http://queues.webkit.org/results/13953277
Filip Pizlo
Comment 3 2012-09-20 14:55:59 PDT
(In reply to comment #2) > (From update of attachment 164978 [details]) > Rejecting attachment 164978 [details] from commit-queue. > > Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 1 > > Geoff Garen found in /mnt/git/webkit-commit-queue/Source/JavaScriptCore/ChangeLog does not appear to be a valid reviewer according to committers.py. > ERROR: /mnt/git/webkit-commit-queue/Source/JavaScriptCore/ChangeLog neither lists a valid reviewer nor contains the string "Unreviewed" or "Rubber stamp" (case insensitive). > > Full output: http://queues.webkit.org/results/13953277 Committing manually.
Filip Pizlo
Comment 4 2012-09-20 16:38:55 PDT
Note You need to log in before you can comment on or make changes to this bug.